# JobFinderAgent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  jobfinder.service
.github/: SECURITY.md
backend/: .env.example  pyproject.toml  requirements.txt  run_batch_test.py  user_profile.md
backend/app/: auth.py  config.py  database.py  login.html  main.py  scheduler.py
backend/app/ingestion/: ats_fetcher.py  normalizer.py  scrapling_fetcher.py
backend/app/middleware/: session.py
backend/app/models/: __init__.py  application.py  company.py  cv_variant.py  job.py  match.py
backend/app/notifications/: telegram.py
backend/app/pipeline/: cv_selector.py  matchmaker.py  prompts.py
backend/app/routers/: auth.py  companies.py  cv_variants.py  matches.py  scanner.py  tracker.py
backend/tests/: conftest.py  test_api_auth.py  test_api_companies.py  test_api_matches.py  test_api_scanner.py  test_api_tracker.py  test_ats_fetcher.py  test_config.py  test_cv_selector.py  test_matchmaker.py  test_models.py  test_normalizer.py  test_scheduler.py  test_scrapling_fetcher.py  test_session_middleware.py  test_telegram.py
docs/: company-research-prompt.md  deploy-guide.md  onboarding-questionnaire.md  open-source-release-plan.md
docs/superpowers/plans/: 2026-04-26-session-auth.md  (+3 more)
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx
scripts/: companies_seed.example.json  companies_seed.json  deploy.sh  seed_companies.py  verify_slugs.py
(+20 files in other folders)
